# PyClef

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  __main__.py  app.py  audio_utils.py  comparison.html  config.py  docs.html  download.html  engine.py  index.html  methodology.html  pyclef.py  pyproject.toml  script.js  style.css  tutorial.html  vision_utils.py
gui/: intro_window.py  main_window.py
pyclef_app/: __init__.py  __main__.py  api.py  audio_utils.py  config.py  diagnostics.py  engine.py  models.py  pipeline.py  quality.py  regression.py  review_tools.py  rhythm.py  scientific.py  validation.py  vision_utils.py  window.py
pyclef_app/model/: README.md  __init__.py
pyclef_app/player/: __init__.py  midi_player.css  midi_player.html  midi_player.js
pyclef_app/ui/: __init__.py  mainPyclef.py  pyClef.ui  resources.py
pyclef_app/ui/flags/: __init__.py
tests/regression/: README.md
tests/regression/baselines/: sample_scientific_baseline.json
training/: README.md
training/scripts/: bootstrap_annotations.py  evaluate_yolo.py  pyclef_training_common.py  scaffold_dataset.py  train_yolo.py
ui/: mainPyclef.py  pyClef.ui  resources.py  resources.qrc
website/: script.js  style.css
