[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclef"
version = "0.1.0"
description = "Desktop OMR tool for turning sheet music into annotations, audio, MIDI, and synchronized video."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Vinicius Fernandes" }
]
keywords = ["omr", "sheet-music", "music", "midi", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "PySide6>=6.6",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "Pillow>=10",
    "pydub>=0.25",
    "pdf2image>=1.17",
    "mido>=1.3",
    "moviepy>=1.0",
    "ultralytics>=8.3",
]

[project.urls]
Homepage = "https://viniciusfs14.github.io/PyClef/"
Repository = "https://github.com/viniciusfs14/PyClef"

[project.scripts]
pyclef = "pyclef:Pyclef"

[tool.setuptools]
py-modules = ["pyclef"]
packages = ["pyclef_app", "pyclef_app.model", "pyclef_app.ui", "pyclef_app.ui.flags"]
include-package-data = true

[tool.setuptools.package-data]
pyclef_app = ["model/README.md"]
"pyclef_app.ui" = ["*.png", "*.ui", "*.qrc", "flags/*.png"]
